[package]
name = "jonathan_converter"
version = "1.0.0"
edition = "2018"
description = "Converts the graphics and text resources of the classic adventure game 'Jonathan' to regular PNG and text files"
authors = ["Malte Thiesen <malte@kamalook.de>"]

[dependencies]
clap = "2.34.0"
failure = "0.1.8"
pcx = "0.2"
png = "0.17.2"
rayon = "1.5.1"

[dev-dependencies]
data-encoding = "2.3.2"
fs_extra = "1.2.0"
ring = "0.16.20"
tempfile = "3.2.0"
