[package]
name = "jonathan_converter"
version = "1.0.0"
edition = "2018"
description = "Converts the graphics and text resources of the classic adventure game 'Jonathan' to regular PNG and text files"
authors = ["Malte Thiesen <malte@kamalook.de>"]

[dependencies]
clap = "3.2.22"
eyre = "0.6.8"
pcx = "0.2"
png = "0.17.5"
rayon = "1.5.3"

[dev-dependencies]
data-encoding = "2.3.2"
fs_extra = "1.2.0"
ring = "0.16.20"
tempfile = "3.3.0"
